# TTFonts

./: .gitignore  CMakeLists.txt  README.md
src/docks/: glyphselectordock.cpp
src/docks/include/: glyphselectordock.h
src/main/: main.cpp  mainwindow.cpp  mainwindow.ui
src/main/include/: common.h  mainwindow.h
src/models/: categoriesmodel.cpp  fontcharactersmodel.cpp  fontcharitem.cpp  fontmetadataitem.cpp  fontmetadatamodel.cpp  unicodemetadatamanager.cpp
src/models/include/: categoriesmodel.h  fontcharactersmodel.h  fontcharitem.h  fontmetadataitem.h  fontmetadatamodel.h  unicodemetadatamanager.h
src/utils/: utils.cpp
src/utils/include/: utils.h
src/widgets/: gliphwidget.cpp  glyphwidget.cpp
src/widgets/include/: gliphwidget.h  glyphwidget.h
